# developing

./: Dockerfile.R  README.md  app.py  create_renv_lock.R  install_r_dependencies.R  pyproject.toml  requirements.txt  run_ec2_job.py  s3-access-policy.json  sample_job.py
agents/: bioinformatics_agent.R  report_generation_agent.py  script_generation_agent.py
agents/cancer_biology_expert_agent/: cancer_biology_expert_agent.py
agents/scientific_critic_agent/: scientific_critic_agent.py
agents/target_discovery_expert/: target_discovery_expert.py
examples/: basic_usage.py  pathway_analysis_training.py  prove_training.py  trainable_agent_example.py
learning/: spatial_marker_analysis.Rmd
orchestrator/: MANIFEST.txt  aws_utils.py  bedrock_client.py  context_store.py  generate_critique.py  generate_interpretation.py  main.py
output/: AB_spatial_marker_topgene_combine_some_groups.xlsx  MANIFEST.txt  TCGA-GBM_CD276_DLL3_SEZ6_coexpression_stats.csv  TCGA-GBM_CD276_DLL3_SEZ6_expression_matrix.csv  TCGA-GBM_CD276_DLL3_SEZ6_summary_report.txt  TCGA_coexpression_biological_interpretation.md  TCGA_coexpression_critique.md  analysis_and_validation_report.md  biological_interpretation_report.md  combined_sketch.rds  detailed_coexpression_report_TCGA-GBM_CD276_DLL3_SEZ6.txt  detailed_coexpression_report_TCGA-GBM_SEZ6_DLL3.txt  dynamic_analysis.py  sample_job.py.out  scientific_critique.txt  seurat_results.txt
src/bedrock_bio/: __init__.py
src/bedrock_bio/agents/: analysis_agent.py  bio_agent.py
src/bedrock_bio/core/: coordinator.py  (+2 more)
templates/: index.html
