[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-multi-agent-bioinformatics"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A multi-agent system for bioinformatics analysis using AWS Bedrock"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx>=3.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scanpy>=1.9.3",
    "anndata>=0.9.2",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "boto3>=1.28.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "dataclasses-json>=0.5.7"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/bedrock-multi-agent-bioinformatics"
"Bug Tracker" = "https://github.com/yourusername/bedrock-multi-agent-bioinformatics/issues"

[tool.hatch.build.targets.wheel]
packages = ["agents", "orchestrator", "src/bedrock_bio"]
